@@ -1,3 +1,7 @@
+2010-12-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/inline.R (Rcpp.plugin.maker): Reverse order in PKG_LIBS 
+
 2010-12-19  Dirk Eddelbuettel  <edd@debian.org>
 
  	* DESCRIPTION: Release 0.9.0
